paragraph/paragraph_parser.go
// Code generated from ./Paragraph.g4 by ANTLR 4.13.2. DO NOT EDIT.

package paragraph // Paragraph
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ParagraphParser struct {
	*antlr.BaseParser
}

var ParagraphParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func paragraphParserInit() {
	staticData := &ParagraphParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "'\\n'",
	}
	staticData.SymbolicNames = []string{
		"", "NUMBER", "X", "BY", "WORD", "NEWLINE", "WS",
	}
	staticData.RuleNames = []string{
		"paragraph", "line", "exerciseLine", "proseLine", "numericToken", "token",
		"byExpr", "multiplier", "number", "note",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ParagraphParserInit initializes any static state used to implement ParagraphParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewParagraphParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ParagraphParserInit() {
	staticData := &ParagraphParserStaticData
	staticData.once.Do(paragraphParserInit)
}

// NewParagraphParser produces a new parser instance for the optional input antlr.TokenStream.
func NewParagraphParser(input antlr.TokenStream) *ParagraphParser {
	ParagraphParserInit()
	this := new(ParagraphParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ParagraphParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Paragraph.g4"

	return this
}

// ParagraphParser tokens.
const (
	ParagraphParserEOF     = antlr.TokenEOF
	ParagraphParserNUMBER  = 1
	ParagraphParserX       = 2
	ParagraphParserBY      = 3
	ParagraphParserWORD    = 4
	ParagraphParserNEWLINE = 5
	ParagraphParserWS      = 6
)

// ParagraphParser rules.
const (
	ParagraphParserRULE_paragraph    = 0
	ParagraphParserRULE_line         = 1
	ParagraphParserRULE_exerciseLine = 2
	ParagraphParserRULE_proseLine    = 3
	ParagraphParserRULE_numericToken = 4
	ParagraphParserRULE_token        = 5
	ParagraphParserRULE_byExpr       = 6
	ParagraphParserRULE_multiplier   = 7
	ParagraphParserRULE_number       = 8
	ParagraphParserRULE_note         = 9
)

// IParagraphContext is an interface to support dynamic dispatch.
type IParagraphContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllLine() []ILineContext
	Line(i int) ILineContext

	// IsParagraphContext differentiates from other interfaces.
	IsParagraphContext()
}

type ParagraphContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParagraphContext() *ParagraphContext {
	var p = new(ParagraphContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_paragraph
	return p
}

func InitEmptyParagraphContext(p *ParagraphContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_paragraph
}

func (*ParagraphContext) IsParagraphContext() {}

func NewParagraphContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParagraphContext {
	var p = new(ParagraphContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParagraphParserRULE_paragraph

	return p
}

func (s *ParagraphContext) GetParser() antlr.Parser { return s.parser }

func (s *ParagraphContext) EOF() antlr.TerminalNode {
	return s.GetToken(ParagraphParserEOF, 0)
}

func (s *ParagraphContext) AllLine() []ILineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILineContext); ok {
			len++
		}
	}

	tst := make([]ILineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILineContext); ok {
			tst[i] = t.(ILineContext)
			i++
		}
	}

	return tst
}

func (s *ParagraphContext) Line(i int) ILineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILineContext)
}

func (s *ParagraphContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParagraphContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParagraphContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.EnterParagraph(s)
	}
}

func (s *ParagraphContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.ExitParagraph(s)
	}
}

func (s *ParagraphContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ParagraphVisitor:
		return t.VisitParagraph(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ParagraphParser) Paragraph() (localctx IParagraphContext) {
	localctx = NewParagraphContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ParagraphParserRULE_paragraph)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(21)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ParagraphParserWORD {
		{
			p.SetState(20)
			p.Line()
		}

		p.SetState(23)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(25)
		p.Match(ParagraphParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILineContext is an interface to support dynamic dispatch.
type ILineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsLineContext differentiates from other interfaces.
	IsLineContext()
}

type LineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineContext() *LineContext {
	var p = new(LineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_line
	return p
}

func InitEmptyLineContext(p *LineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_line
}

func (*LineContext) IsLineContext() {}

func NewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineContext {
	var p = new(LineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParagraphParserRULE_line

	return p
}

func (s *LineContext) GetParser() antlr.Parser { return s.parser }

func (s *LineContext) CopyAll(ctx *LineContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *LineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ExerciseLineAltContext struct {
	LineContext
}

func NewExerciseLineAltContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExerciseLineAltContext {
	var p = new(ExerciseLineAltContext)

	InitEmptyLineContext(&p.LineContext)
	p.parser = parser
	p.CopyAll(ctx.(*LineContext))

	return p
}

func (s *ExerciseLineAltContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExerciseLineAltContext) ExerciseLine() IExerciseLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExerciseLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExerciseLineContext)
}

func (s *ExerciseLineAltContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(ParagraphParserNEWLINE, 0)
}

func (s *ExerciseLineAltContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.EnterExerciseLineAlt(s)
	}
}

func (s *ExerciseLineAltContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.ExitExerciseLineAlt(s)
	}
}

func (s *ExerciseLineAltContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ParagraphVisitor:
		return t.VisitExerciseLineAlt(s)

	default:
		return t.VisitChildren(s)
	}
}

type ProseLineAltContext struct {
	LineContext
}

func NewProseLineAltContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ProseLineAltContext {
	var p = new(ProseLineAltContext)

	InitEmptyLineContext(&p.LineContext)
	p.parser = parser
	p.CopyAll(ctx.(*LineContext))

	return p
}

func (s *ProseLineAltContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProseLineAltContext) ProseLine() IProseLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProseLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProseLineContext)
}

func (s *ProseLineAltContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(ParagraphParserNEWLINE, 0)
}

func (s *ProseLineAltContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.EnterProseLineAlt(s)
	}
}

func (s *ProseLineAltContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.ExitProseLineAlt(s)
	}
}

func (s *ProseLineAltContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ParagraphVisitor:
		return t.VisitProseLineAlt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ParagraphParser) Line() (localctx ILineContext) {
	localctx = NewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ParagraphParserRULE_line)
	var _la int

	p.SetState(35)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		localctx = NewExerciseLineAltContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(27)
			p.ExerciseLine()
		}
		p.SetState(29)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == ParagraphParserNEWLINE {
			{
				p.SetState(28)
				p.Match(ParagraphParserNEWLINE)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case 2:
		localctx = NewProseLineAltContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(31)
			p.ProseLine()
		}
		p.SetState(33)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == ParagraphParserNEWLINE {
			{
				p.SetState(32)
				p.Match(ParagraphParserNEWLINE)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExerciseLineContext is an interface to support dynamic dispatch.
type IExerciseLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	NumericToken() INumericTokenContext
	AllWORD() []antlr.TerminalNode
	WORD(i int) antlr.TerminalNode
	AllToken() []ITokenContext
	Token(i int) ITokenContext

	// IsExerciseLineContext differentiates from other interfaces.
	IsExerciseLineContext()
}

type ExerciseLineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExerciseLineContext() *ExerciseLineContext {
	var p = new(ExerciseLineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_exerciseLine
	return p
}

func InitEmptyExerciseLineContext(p *ExerciseLineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_exerciseLine
}

func (*ExerciseLineContext) IsExerciseLineContext() {}

func NewExerciseLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExerciseLineContext {
	var p = new(ExerciseLineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParagraphParserRULE_exerciseLine

	return p
}

func (s *ExerciseLineContext) GetParser() antlr.Parser { return s.parser }

func (s *ExerciseLineContext) NumericToken() INumericTokenContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INumericTokenContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INumericTokenContext)
}

func (s *ExerciseLineContext) AllWORD() []antlr.TerminalNode {
	return s.GetTokens(ParagraphParserWORD)
}

func (s *ExerciseLineContext) WORD(i int) antlr.TerminalNode {
	return s.GetToken(ParagraphParserWORD, i)
}

func (s *ExerciseLineContext) AllToken() []ITokenContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITokenContext); ok {
			len++
		}
	}

	tst := make([]ITokenContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITokenContext); ok {
			tst[i] = t.(ITokenContext)
			i++
		}
	}

	return tst
}

func (s *ExerciseLineContext) Token(i int) ITokenContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITokenContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITokenContext)
}

func (s *ExerciseLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExerciseLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExerciseLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.EnterExerciseLine(s)
	}
}

func (s *ExerciseLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.ExitExerciseLine(s)
	}
}

func (s *ExerciseLineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ParagraphVisitor:
		return t.VisitExerciseLine(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ParagraphParser) ExerciseLine() (localctx IExerciseLineContext) {
	localctx = NewExerciseLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ParagraphParserRULE_exerciseLine)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ParagraphParserWORD {
		{
			p.SetState(37)
			p.Match(ParagraphParserWORD)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(40)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(42)
		p.NumericToken()
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 5, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(43)
				p.Token()
			}

		}
		p.SetState(48)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 5, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IProseLineContext is an interface to support dynamic dispatch.
type IProseLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllWORD() []antlr.TerminalNode
	WORD(i int) antlr.TerminalNode

	// IsProseLineContext differentiates from other interfaces.
	IsProseLineContext()
}

type ProseLineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProseLineContext() *ProseLineContext {
	var p = new(ProseLineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_proseLine
	return p
}

func InitEmptyProseLineContext(p *ProseLineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_proseLine
}

func (*ProseLineContext) IsProseLineContext() {}

func NewProseLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProseLineContext {
	var p = new(ProseLineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParagraphParserRULE_proseLine

	return p
}

func (s *ProseLineContext) GetParser() antlr.Parser { return s.parser }

func (s *ProseLineContext) AllWORD() []antlr.TerminalNode {
	return s.GetTokens(ParagraphParserWORD)
}

func (s *ProseLineContext) WORD(i int) antlr.TerminalNode {
	return s.GetToken(ParagraphParserWORD, i)
}

func (s *ProseLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProseLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProseLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.EnterProseLine(s)
	}
}

func (s *ProseLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.ExitProseLine(s)
	}
}

func (s *ProseLineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ParagraphVisitor:
		return t.VisitProseLine(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ParagraphParser) ProseLine() (localctx IProseLineContext) {
	localctx = NewProseLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ParagraphParserRULE_proseLine)
	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = 1
	for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1:
			{
				p.SetState(49)
				p.Match(ParagraphParserWORD)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// INumericTokenContext is an interface to support dynamic dispatch.
type INumericTokenContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ByExpr() IByExprContext
	Multiplier() IMultiplierContext
	Number() INumberContext

	// IsNumericTokenContext differentiates from other interfaces.
	IsNumericTokenContext()
}

type NumericTokenContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNumericTokenContext() *NumericTokenContext {
	var p = new(NumericTokenContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_numericToken
	return p
}

func InitEmptyNumericTokenContext(p *NumericTokenContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_numericToken
}

func (*NumericTokenContext) IsNumericTokenContext() {}

func NewNumericTokenContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NumericTokenContext {
	var p = new(NumericTokenContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParagraphParserRULE_numericToken

	return p
}

func (s *NumericTokenContext) GetParser() antlr.Parser { return s.parser }

func (s *NumericTokenContext) ByExpr() IByExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IByExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IByExprContext)
}

func (s *NumericTokenContext) Multiplier() IMultiplierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMultiplierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMultiplierContext)
}

func (s *NumericTokenContext) Number() INumberContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INumberContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INumberContext)
}

func (s *NumericTokenContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NumericTokenContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NumericTokenContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.EnterNumericToken(s)
	}
}

func (s *NumericTokenContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.ExitNumericToken(s)
	}
}

func (s *NumericTokenContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ParagraphVisitor:
		return t.VisitNumericToken(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ParagraphParser) NumericToken() (localctx INumericTokenContext) {
	localctx = NewNumericTokenContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ParagraphParserRULE_numericToken)
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 7, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(54)
			p.ByExpr()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(55)
			p.Multiplier()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(56)
			p.Number()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITokenContext is an interface to support dynamic dispatch.
type ITokenContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	NumericToken() INumericTokenContext
	Note() INoteContext

	// IsTokenContext differentiates from other interfaces.
	IsTokenContext()
}

type TokenContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTokenContext() *TokenContext {
	var p = new(TokenContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_token
	return p
}

func InitEmptyTokenContext(p *TokenContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ParagraphParserRULE_token
}

func (*TokenContext) IsTokenContext() {}

func NewTokenContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TokenContext {
	var p = new(TokenContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ParagraphParserRULE_token

	return p
}

func (s *TokenContext) GetParser() antlr.Parser { return s.parser }

func (s *TokenContext) NumericToken() INumericTokenContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INumericTokenContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INumericTokenContext)
}

func (s *TokenContext) Note() INoteContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INoteContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INoteContext)
}

func (s *TokenContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TokenContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TokenContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.EnterToken(s)
	}
}

func (s *TokenContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ParagraphListener); ok {
		listenerT.ExitToken(s)
	}
}

func (s *TokenContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ParagraphVisitor:
		return t.VisitToken(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ParagraphParser) Token() (localctx ITokenContext) {
	localctx = NewTokenContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, ParagraphParserRULE_token)
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case ParagraphParserNUMBER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(59)
			p.NumericToken()
		}

	case ParagraphParserWORD:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(60)
			p.Note()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}
